[package]
name = "git_info2"
version = "0.1.2"
authors = [
  "Sagie Gur-Ari <sagiegurari@gmail.com>",
  "Wenyu Zhao <wenyuzhaox@gmail.com>",
]
description = "Extracts git repository information."
license = "Apache-2.0"
edition = "2021"
documentation = "https://docs.rs/git_info2"
homepage = "http://github.com/wenyuzhao/git_info2"
repository = "https://github.com/wenyuzhao/git_info2.git"
readme = "README.md"
keywords = ["environment", "build"]
categories = ["development-tools", "development-tools::build-utils"]
include = [
  "/benches/*",
  "/docs/*",
  "/examples/*",
  "/src/*",
  "/tests/*",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/Makefile.toml",
]

[dev-dependencies]
doc-comment = "^0.3"
